Estrutura da pastas e readme

--- a/desafio01/index.html
+++ b/desafio01/index.html
@@ -21,16 +21,16 @@
                 <span> Find gardening enthusiasts from all over the world </span>
             </div>
             <div class="navigation-dots">
-                <a href="index.html"></a>
-                <a href="second-page.html"></a>
-                <a href="third-page.html"></a>
+                <a class="active" href="index.html"></a>
+                <a class="dot" href="./pages/second-page.html"></a>
+                <a class="dot" href="./pages/third-page.html"></a>
             </div>
             <div class="button-container">
                 <button class="btn-continue">
-                    <a class="continue-link"href="second-page"> Continue </a>
+                    <a class="continue-link"href="./pages/second-page.html"> Continue </a>
                 </button>
-                <button>
-                    <a  href="third-page"> Skip </a>
+                <button class="btn-skip">
+                    <a href="./pages/third-page.html"> Skip </a>
                 </button>
             </div>
         </div>
