--- a/desafio01/pages/third-page.html
+++ b/desafio01/pages/third-page.html
@@ -9,29 +9,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/css/styles.css">
+    <link rel="stylesheet" href="../styles/css/styles.css">
 </head>
 
 <body>
     <main class="box">
-        <img src="assets/getting-food.svg" alt="">
+        <img src="../assets/ecommerce.svg" alt="">
         <div class="text-container">
             <div class="text">
-                <h1> Get fast & safe delivery </h1>
-                <span> Get good quality products for your plants  </span>
+                <h1> Buy & Sell Tools </h1>
+                <span> Buy & sell good quality products for your beautiful plants  </span>
             </div>
             <div class="navigation-dots">
-                <a href="index.html"></a>
-                <a href="second-page.html"></a>
-                <a href="third-page.html"></a>
+                <a class="dot" href="../index.html"></a>
+                <a class="dot" href="second-page.html"></a>
+                <a class="active" href="third-page.html"></a>
             </div>
             <div class="button-container">
                 <button class="btn-continue">
-                    <a class="continue-link"href="third-page"> Continue </a>
+                    <a class="continue-link"href="#"> Get started </a>
                 </button>
-                <button>
-                    <a  href="third-page"> Skip </a>
-                </button>
+ 
             </div>
         </div>
     </main>
