Ajuste responsividade para aparelhos com heigth abaixo de 740px

--- a/desafio02/add-to-basket-page.html
+++ b/desafio02/add-to-basket-page.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <section>
+    <section class="basket-section">
         <div class="back-container">
             <div>
                 <a href="home-screen-page.html">
