Ajustes de responsividade em dispositivos menores

--- a/desafio01/index.html
+++ b/desafio01/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <main class="box">
-        <img src="assets/plant-community.svg" alt="">
+        <img src="assets/plant-community.svg" alt="Imagem de rede de pessoas e globo terrestre ao fundo">
         <div class="text-container">
             <div class="text">
                 <h1> Plant lover Community </h1>
