--- a/desafio01/pages/second-page.html
+++ b/desafio01/pages/second-page.html
@@ -14,7 +14,7 @@
 
 <body>
     <main class="box">
-        <img src="../assets/getting-food.svg" alt="">
+        <img src="../assets/getting-food.svg" alt="Imagem duas pessoas conversando e recebendo mercadoria">
         <div class="text-container">
             <div class="text">
                 <h1> Get fast & safe delivery </h1>
@@ -29,7 +29,7 @@
                 <button class="btn-continue">
                     <a class="continue-link"href="third-page.html"> Continue </a>
                 </button>
-                <button>
+                <button class="btn-skip">
                     <a  href="third-page.html"> Skip </a>
                 </button>
             </div>
