--- a/desafio01/pages/third-page.html
+++ b/desafio01/pages/third-page.html
@@ -14,7 +14,7 @@
 
 <body>
     <main class="box">
-        <img src="../assets/ecommerce.svg" alt="">
+        <img class="third-image" src="../assets/ecommerce.svg" alt="Imagem do e-commerce, moça segurando megaphone.">
         <div class="text-container">
             <div class="text">
                 <h1> Buy & Sell Tools </h1>
