Ajustes footer e header

--- a/desafio03/pages/bento-recent-work.html
+++ b/desafio03/pages/bento-recent-work.html
@@ -119,7 +119,7 @@
                     </span>
                      </a>
                 </div>
-                <a href="/pages/404.html">
+                <a class="work-contact-us" href="/pages/404.html">
                     <button>
                         Contact Us
                     </button>
