--- a/desafio03/pages/bento-visual-identity.html
+++ b/desafio03/pages/bento-visual-identity.html
@@ -18,6 +18,7 @@
         <header>
             <div class="container header">
                 <img src="/assets/light-mode.svg" alt="Logo Folio Agency">
+                
                 <div class="mobile-menu-hamburguer close" id="menu-close">
                     <span class="span-hamburguer"></span>
                     <span class="span-hamburguer"></span>
@@ -26,18 +27,18 @@
         </header>
         <div class="container menu">
             <div class="menu-navigation">
-                <h6>
+                <a  href="/pages/work.html">
                     Work
-                </h6>
-                <h6>
+                </a>
+                <a  href="/pages/who-we-are.html">
                     About
-                </h6>
-                <h6 class="title--active">
+                </a>
+                <a href="/pages/service.html">
                     Services
-                </h6>
-                <h6>
+                </a>
+                <a href="/pages/job.html">
                     Jobs
-                </h6>
+                </a>
             </div>
 
             <ul class="social-list">
@@ -46,7 +47,6 @@
                 <li><img src="/assets/footer-logo-instagram.svg" alt=""></li>
             </ul>
         </div>
-
     </section>
 
     <!----------------------------------  HEADER -------------------------------------------------->
