--- a/desafio03/pages/bento-cta.html
+++ b/desafio03/pages/bento-cta.html
@@ -49,9 +49,25 @@
 
     
     <section class="container-hider">
-        <header>
-            <div class="container header">
+     <!---------------------------------------  HEADER -------------------------------------------------->
+      
+     <header>
+            <div class="header-container header">
                 <img src="/assets/logo-light-mode.svg" alt="Logo Folio Agency">
+                <ul class="header-navigation">
+                    <li class="active-page"><a href="/pages/who-we-are.html"> About </a></li>
+                    <li><a href="/pages/work.html"> Work</a></li>
+                    <li><a href="/pages/service.html"> Services</a></li>
+                    <li class="job-link">
+                        <a href="/pages/job.html"> Jobs</a>
+                        <span class="job-alert">
+                            2
+                        </span>
+                    </li>
+                </ul>
+                <a class="header-contact-btn" href="/pages/404.html">
+                    <button> Contact Us </button>
+                </a>
                 <div class="mobile-menu-hamburguer" id="menu-open">
                     <div class="span-hamburguer"></div>
                     <div class="span-hamburguer"></div>
