--- a/desafio03/pages/job.html
+++ b/desafio03/pages/job.html
@@ -49,7 +49,7 @@
 
    
     
-    <section class="container-hider">
+    <section class="container-hider purple-lines">
 
      <!----------------------------------  HEADER -------------------------------------------------->
 
